--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drinking the Java Quiz</title>
+  <title>Coffee Sipper Javascript Quiz</title>
   <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
 <body>
+  <div class="clock">Timer - <span id="countdown"></span></div>
+
   <div id="score"><a href="scoreview.html">Top Scores</a></div>
-
-  <div class="clock">Timer: <span id="countdown">0</span></div>
-
-  <div class="Box"></div>
   <div id="mainscreen" class="main">
-    <h1>Drinking the Java Quiz</h1>
+    <h1>Coffee Sipper Javascript Quiz</h1>
     <p>
       You have 2 minutes to answer the questions correctly.
-      <p> 5 seconds get reduce from the timer for every incorrect answer.
+      <p> 5 seconds get reduced from the timer for every incorrect answer.
     </p>
     <button id="go">Lets Go!</button>
   </div>
+
+
   <div id="scorelist" class="scorelist hidden"></div>
   </div>
   <div id="qsa" class="hidden">
