--- a/scoreview.html
+++ b/scoreview.html
@@ -5,15 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Scoreview</title>
+  <title>Coffee Sipper Score</title>
 
   <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
 <body>
-  <div class="box">
-    <h1>Top Scores</h1>
-    <ol id="topscores"></ol>
+    <h2>Javascript Sippers Top Scores:</h2>
+    <div id="topscores"></div>
 
     <a href="index.html"><button>Quiz!</button></a>
     <button id="remove">Remove Scores!</button>
