--- a/scoreview.html
+++ b/scoreview.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Coffee Sipper Score</title>
+  <title>Coffee Sippers Score</title>
 
   <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
 <body>
-    <h2>Javascript Sippers Top Scores:</h2>
+    <h2>Javascript Sippers Scores:</h2>
     <div id="topscores"></div>
 
     <a href="index.html"><button>Quiz!</button></a>
-    <button id="remove">Remove Scores!</button>
+    <button id="remove">Remove!</button>
   </div>
 
   <script src="./assets/js/scoreview.js"></script>
