media flex response

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
+<main>
 <body>
   <div class="clock">Timer - <span id="countdown">120</span></div>
 
@@ -44,5 +45,6 @@
   <script src="./assets/js/qsa.js"></script>
   <script src="./assets/js/quiz.js"></script>
 </body>
+</main>
 
 </html>
