--- a/scoreview.html
+++ b/scoreview.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h2>Javascript Sippers Scores:</h2>
+    <h2>Javascript Sippers Score!:</h2>
     <div id="topscores"></div>
 
     <a href="index.html"><button>Quiz!</button></a>
